# openai

./: FrozenLake-v0.ipynb  README.md  pyproject.toml  requirements.pip  test_frozenlake_v0.py  test_runfile.py
.ipynb_checkpoints/: FrozenLake-v0-checkpoint.ipynb
notebooks/: CartPole-v0.ipynb  FrozenLake-v0.ipynb
notebooks/.ipynb_checkpoints/: CartPole-v0-checkpoint.ipynb
openai/: base.py  parameters.py  simulator.py
openai.egg-info/: PKG-INFO  SOURCES.txt
openai/agents/: qlearning.py  random.py
tests/unit/: test_parameters.py
