[tool.poetry]
name = "openai"
version = "0.1.0"
description = "Code for different solutions to openai gym"
authors = ["Andrew Patterson <andrew.patterson@asos.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
gym = "0.5.7"
jupyter = "1.0.0"
matplotlib = "*"
keras = "*"
tqdm = "*"
pytest = "*"
pandas = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
